--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>LAURA <del>FERNANDES</del> FEIJÓ <DEL>DA SILVA</DEL> É A MELHOR E MAIS BONITA NAMORADA DO MUNDO</h1>
-    <img src="/amorzin.gif" alt="amo meu amorzin" width="100%">
+    <img src="amorzin.gif" alt="amo meu amorzin" width="100%">
 </body>
 </html>
